--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-architect
+
+title: Kits CanSat e CubeSat Educacionais PION
+description: Documentação para utilização dos Kits Educacionais PION
